# sshrs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  completer.rs  configstore.rs  main.rs  searcher.rs  term.rs  ui.rs
